[package]
name = "cashier-server"
version = "0.1.0"
authors = ["Sun Ziping <sunziping2016@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0"
actix-rt = "1.0"
bson = "0.14.1"
clap = "3.0.0-beta.1"
git-version = "0.3.4"
mongodb = "0.10.0"
serde = "1.0.111"
serde_urlencoded = "0.6.1"
tokio = { version = "0.2.21", features = ["full"] }
